Colaboratory를 통해 생성됨

--- a/코테입문_DAY2(사칙연산,_조건문,_배열)_박하린.ipynb
+++ b/코테입문_DAY2(사칙연산,_조건문,_배열)_박하린.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhask6UrX3PX8iT71j2GY2",
+      "authorship_tag": "ABX9TyOWkgis7Y7Sion2spgv9P+z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,8 +134,7 @@
         "\n",
         "\n",
         "    # 내가 시도했던 방법\n",
-        "    total = (num1/denom1)+(num2/denom2)\n",
-        "    if num1/denom1"
+        "    total = (num1/denom1)+(num2/denom2)"
       ],
       "metadata": {
         "id": "VKSImnmKkS2U"
@@ -165,11 +164,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def solution(numbers):\n",
+        "    return [i * 2 for i in numbers]"
+      ],
       "metadata": {
         "id": "_MSD-PNakU2k"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     }
   ]
